2006-07-09 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, lib/variables.mk: make
	  ChangeLog heads available on the WEB
	* local/amd64-linux1.mk: enable the pic16 regression tests

2006-07-07 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: added --host and --build options to
	  configure, so that sdcc-extra can be cross-compiled
	* components/sdcc.mk, lib/bootstrap.mk, lib/variables.mk: make
	  regression test results available on the WEB
	* lib/bootstrap.mk, lib/upload.mk: rules do_update and
	  remove-old-versions moved to newly added upload.mk,
	  remove-old-versions removes old versions in $(WEBREGTESTDIR)
	* lib variables.mk: HTDOCDIR corrected to HTDOCSDIR
	* Makefile: added include upload.mk

2006-07-04 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: accept TARGETXXX configure options

2006-07-03 Borut Razem <borut.razem AT siol.net>

	* local/ppc-osx3.mk: added
	* sdcc-build-bootstrap.sh: Remove the stamp
	* components/sdcc.mk: introduced TARGETCPPFLAGS configure option

2006-06-30 Borut Razem <borut.razem AT siol.net>

	* local/openpower-linux1.mk: added

2006-06-18 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/doc-archive.mk, lib/fetch.mk,
	  lib/src-archive.mk, components/sdcc.mk, components/sdcc-extra.mk,
	  sdcc-build-bootstrap.sh:
	  use common ORIG tree with VPATH functionality

2006-06-17 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: run configure from the current (SRC) directory
	* lib/variables.mk: get current SVN release from
	  sdcc-builder@shell.cf.sourceforge.net

2006-06-15 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, components/sdcc-extra.mk, lib/bootstrap.mk,
	  lib/doc-archive.mk, lib/variables.mk: preparation for common ORIG tree

2006-06-11 Borut Razem <borut.razem AT siol.net>

	* lib/src-archive.mk, lib/variables.mk: introduced SNAPSHOTID
	* lib/bootstrap.mk: introduced SNAPSHOTID; replaced '_' with '-' in the